# VSCodeMemory

./: CMakeLists.txt  Client.cpp  Client.h  GarbageCollector.cpp  GarbageCollector.h  Heap.cpp  Heap.h  List.cpp  List.h  Node.cpp  Node.h  README.md  Reader.cpp  Reader.h  TList.cpp  TList.h  TNode.cpp  TNode.h  VSCodeMemory.pro  VSCodeMemory.pro.user.4.8-pre1  VSPtr.cpp  VSPtr.h  binding.gyp  client.cpp  client.h  heap.cpp  heap.h  hl_exception.h  hl_hashwrapper.h  hl_md5.cpp  hl_md5.h  hl_md5wrapper.cpp  hl_md5wrapper.h  hl_types.h  json.cpp  json.h  main.cpp  setup.h  vscodememory.cpp  vscodememory.h  (+1 more)
Extension for VSCODE/: README.md
VSCodeMemoryLibrary/: CMakeLists.txt  GarbageCollector.h  Node.h  Reader.h  TList.cpp  TList.h  TNode.cpp  TNode.h  VSPtr.cpp  VSPtr.h  client.h  heap.cpp  heap.h  main.cpp
